--- a/index.html
+++ b/index.html
@@ -1,40 +1,37 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Mvns : CLI tool to search library in maven central repository">
+    <title>Mvns by hotchemi</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Mvns</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Mvns</h1>
+        <p>CLI tool to search library in maven central repository</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/hotchemi/mvns">View on GitHub</a>
+        <p class="view"><a href="https://github.com/hotchemi/mvns">View the Project on GitHub <small>hotchemi/mvns</small></a></p>
 
-          <h1 id="project_title">Mvns</h1>
-          <h2 id="project_tagline">CLI tool to search library in maven central repository</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/hotchemi/mvns/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/hotchemi/mvns/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+        <ul>
+          <li><a href="https://github.com/hotchemi/mvns/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/hotchemi/mvns/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/hotchemi/mvns">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <h1>
 <a name="mvns" class="anchor" href="#mvns"><span class="octicon octicon-link"></span></a>mvns</h1>
 
-<p><a href="https://pypi.python.org/pypi/mvns/0.1.0"><img src="https://pypip.in/v/mvns/badge.png" alt="Downloads"></a> </p>
+<p><a href="https://pypi.python.org/pypi/mvns/"><img src="https://pypip.in/v/mvns/badge.png" alt="Downloads"></a></p>
 
 <p>CLI tool to search library in maven central repository.</p>
 
@@ -86,7 +83,7 @@ com.squareup.picasso:picasso:2.3.4
 
 <ul>
 <li>
-<code>-A</code> Show all version. </li>
+<code>-A</code> Show all version.</li>
 </ul><div class="highlight highlight-sh"><pre>mvns -g com.squareup.picasso -a picasso -A
 com.squareup.picasso:picasso:2.3.4
 com.squareup.picasso:picasso:2.3.3
@@ -128,6 +125,7 @@ com.squareup.picasso:picasso:2.3.4
 <a name="changelog" class="anchor" href="#changelog"><span class="octicon octicon-link"></span></a>ChangeLog</h2>
 
 <ul>
+<li>2014/09/20 0.1.1 release.</li>
 <li>2014/09/14 0.1.0 release.</li>
 </ul><h2>
 <a name="licence" class="anchor" href="#licence"><span class="octicon octicon-link"></span></a>Licence</h2>
@@ -147,17 +145,12 @@ com.squareup.picasso:picasso:2.3.4
  limitations under the License.
 </code></pre>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Mvns maintained by <a href="https://github.com/hotchemi">hotchemi</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/hotchemi">hotchemi</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
