--- a/index.html
+++ b/index.html
@@ -4,68 +4,74 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Mvns by hotchemi</title>
-
     <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="stylesheets/github-dark.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
     <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
   </head>
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/hotchemi/mvns">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/hotchemi/mvns/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/hotchemi/mvns/tarball/master">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        </nav>
+      </div><!-- end header -->
+
     <div class="wrapper">
-      <header>
-        <h1>Mvns</h1>
-        <p>CLI tool to search library in maven central repository</p>
 
-        <p class="view"><a href="https://github.com/hotchemi/mvns">View the Project on GitHub <small>hotchemi/mvns</small></a></p>
-
-
-        <ul>
-          <li><a href="https://github.com/hotchemi/mvns/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/hotchemi/mvns/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/hotchemi/mvns">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
       <section>
-        <h1>
-<a name="mvns" class="anchor" href="#mvns"><span class="octicon octicon-link"></span></a>mvns</h1>
+        <div id="title">
+          <h1>Mvns</h1>
+          <p>CLI tool to search library in maven central repository</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/hotchemi">hotchemi</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
 
-<p><a href="https://pypi.python.org/pypi/mvns/"><img src="https://pypip.in/v/mvns/badge.png" alt="Downloads"></a></p>
+        <h1>
+<a id="mvns-" class="anchor" href="#mvns-" aria-hidden="true"><span class="octicon octicon-link"></span></a>mvns <a href="http://badge.fury.io/py/mvns"><img src="https://badge.fury.io/py/mvns.svg" alt="PyPI version"></a>
+</h1>
 
 <p>CLI tool to search library in maven central repository.</p>
 
 <h2>
-<a name="install" class="anchor" href="#install"><span class="octicon octicon-link"></span></a>Install</h2>
+<a id="install" class="anchor" href="#install" aria-hidden="true"><span class="octicon octicon-link"></span></a>Install</h2>
 
 <p>Use <code>pip</code> or <code>easy_install</code>.</p>
 
-<div class="highlight highlight-sh"><pre>pip install mvns
-</pre></div>
+<div class="highlight highlight-sh"><pre>pip install mvns</pre></div>
 
 <p>or</p>
 
-<div class="highlight highlight-sh"><pre>easy_install install mvns
-</pre></div>
+<div class="highlight highlight-sh"><pre>easy_install mvns</pre></div>
 
 <h2>
-<a name="usage" class="anchor" href="#usage"><span class="octicon octicon-link"></span></a>Usage</h2>
+<a id="usage" class="anchor" href="#usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Usage</h2>
 
 <h3>
-<a name="search-by-query" class="anchor" href="#search-by-query"><span class="octicon octicon-link"></span></a>Search by query</h3>
+<a id="search-by-query" class="anchor" href="#search-by-query" aria-hidden="true"><span class="octicon octicon-link"></span></a>Search by query</h3>
 
-<div class="highlight highlight-sh"><pre>&gt; mvns picasso
-com.squareup.picasso:picasso:2.3.4
-it.sephiroth.android.library.picasso:picasso:2.3.4.3
-com.squareup.picasso:picasso-parent:2.3.4
-it.sephiroth.android.library.picasso:picasso-sample:2.1.6
-com.squareup.picasso:picasso-sample:2.3.4
-com.squareup.picasso:picasso-pollexor:2.3.4
-com.marvinlabs:android-slideshow-widget-picasso-plugin:0.5.0
-</pre></div>
+<div class="highlight highlight-sh"><pre><span class="pl-k">&gt;</span> mvns picasso
+compile <span class="pl-s"><span class="pl-pds">'</span>com.squareup.picasso:picasso:2.5.2<span class="pl-pds">'</span></span>
+compile <span class="pl-s"><span class="pl-pds">'</span>com.squareup.picasso:picasso-parent:2.5.2<span class="pl-pds">'</span></span>
+compile <span class="pl-s"><span class="pl-pds">'</span>it.sephiroth.android.library.picasso:picasso-sample:2.1.6<span class="pl-pds">'</span></span>
+compile <span class="pl-s"><span class="pl-pds">'</span>com.squareup.picasso:picasso-sample:2.5.2<span class="pl-pds">'</span></span>
+compile <span class="pl-s"><span class="pl-pds">'</span>com.squareup.picasso:picasso-pollexor:2.5.2<span class="pl-pds">'</span></span>
+compile <span class="pl-s"><span class="pl-pds">'</span>com.twotoasters.servos:util-picasso:1.0.0<span class="pl-pds">'</span></span>
+compile <span class="pl-s"><span class="pl-pds">'</span>com.marvinlabs:android-slideshow-widget-picasso-plugin:0.5.0<span class="pl-pds">'</span></span></pre></div>
 
 <h3>
-<a name="search-by-groupid-and-so-on" class="anchor" href="#search-by-groupid-and-so-on"><span class="octicon octicon-link"></span></a>Search by groupId and so on</h3>
+<a id="search-by-groupid-and-so-on" class="anchor" href="#search-by-groupid-and-so-on" aria-hidden="true"><span class="octicon octicon-link"></span></a>Search by groupId and so on</h3>
 
 <ul>
 <li>
@@ -74,46 +80,44 @@ com.marvinlabs:android-slideshow-widget-picasso-plugin:0.5.0
 <code>-a</code> Specify artifactId.</li>
 <li>
 <code>-v</code> Specify version.</li>
-</ul><div class="highlight highlight-sh"><pre>mvns -g com.squareup.picasso -a picasso -v 2.3.4
-com.squareup.picasso:picasso:2.3.4
-</pre></div>
+</ul>
+
+<div class="highlight highlight-sh"><pre>mvns -g com.squareup.picasso -a picasso -v 2.5.2
+compile <span class="pl-s"><span class="pl-pds">'</span>com.squareup.picasso:picasso-parent:2.5.2<span class="pl-pds">'</span></span></pre></div>
 
 <h3>
-<a name="select-all-version" class="anchor" href="#select-all-version"><span class="octicon octicon-link"></span></a>Select all version</h3>
+<a id="select-all-version" class="anchor" href="#select-all-version" aria-hidden="true"><span class="octicon octicon-link"></span></a>Select all version</h3>
 
 <ul>
 <li>
 <code>-A</code> Show all version.</li>
-</ul><div class="highlight highlight-sh"><pre>mvns -g com.squareup.picasso -a picasso -A
-com.squareup.picasso:picasso:2.3.4
-com.squareup.picasso:picasso:2.3.3
-com.squareup.picasso:picasso:2.3.2
-com.squareup.picasso:picasso:2.3.1
-com.squareup.picasso:picasso:2.3.0
-com.squareup.picasso:picasso:2.2.0
-com.squareup.picasso:picasso:2.1.1
-com.squareup.picasso:picasso:2.1.0
-com.squareup.picasso:picasso:2.0.2
-com.squareup.picasso:picasso:2.0.1
-</pre></div>
+</ul>
+
+<div class="highlight highlight-sh"><pre>mvns -g com.squareup.picasso -a picasso -A
+compile <span class="pl-s"><span class="pl-pds">'</span>com.squareup.picasso:picasso:2.3.4<span class="pl-pds">'</span></span>
+compile <span class="pl-s"><span class="pl-pds">'</span>com.squareup.picasso:picasso:2.3.3<span class="pl-pds">'</span></span>
+compile <span class="pl-s"><span class="pl-pds">'</span>com.squareup.picasso:picasso:2.3.2<span class="pl-pds">'</span></span>
+compile <span class="pl-s"><span class="pl-pds">'</span>com.squareup.picasso:picasso:2.3.1<span class="pl-pds">'</span></span>
+compile <span class="pl-s"><span class="pl-pds">'</span>com.squareup.picasso:picasso:2.3.0<span class="pl-pds">'</span></span></pre></div>
 
 <h3>
-<a name="limit-number-of-result" class="anchor" href="#limit-number-of-result"><span class="octicon octicon-link"></span></a>Limit number of result.</h3>
+<a id="limit-number-of-result" class="anchor" href="#limit-number-of-result" aria-hidden="true"><span class="octicon octicon-link"></span></a>Limit number of result.</h3>
 
 <ul>
 <li>
 <code>-m</code> Limit number of result. default is 20.</li>
-</ul><div class="highlight highlight-sh"><pre>mvns picasso -m 1
-com.squareup.picasso:picasso:2.3.4
-</pre></div>
+</ul>
+
+<div class="highlight highlight-sh"><pre>mvns picasso -m 1
+compile <span class="pl-s"><span class="pl-pds">'</span>com.squareup.picasso:picasso:2.3.4<span class="pl-pds">'</span></span></pre></div>
 
 <h2>
-<a name="support" class="anchor" href="#support"><span class="octicon octicon-link"></span></a>Support</h2>
+<a id="support" class="anchor" href="#support" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support</h2>
 
-<p>Python 2.7 and 3.4 are supported.</p>
+<p>Supports Python 2.7 and 3.4.</p>
 
 <h2>
-<a name="contribute" class="anchor" href="#contribute"><span class="octicon octicon-link"></span></a>Contribute</h2>
+<a id="contribute" class="anchor" href="#contribute" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contribute</h2>
 
 <ol>
 <li>Fork it</li>
@@ -121,16 +125,22 @@ com.squareup.picasso:picasso:2.3.4
 <li>Commit your changes (<code>git commit -am 'Added some feature'</code>)</li>
 <li>Push to the branch (<code>git push origin my-new-feature</code>)</li>
 <li>Create new Pull Request</li>
-</ol><h2>
-<a name="changelog" class="anchor" href="#changelog"><span class="octicon octicon-link"></span></a>ChangeLog</h2>
+</ol>
+
+<h2>
+<a id="changelog" class="anchor" href="#changelog" aria-hidden="true"><span class="octicon octicon-link"></span></a>ChangeLog</h2>
 
 <ul>
+<li>2015/07/05 0.1.3 release.</li>
+<li>2015/05/11 0.1.2 release.</li>
 <li>2014/09/20 0.1.1 release.</li>
 <li>2014/09/14 0.1.0 release.</li>
-</ul><h2>
-<a name="licence" class="anchor" href="#licence"><span class="octicon octicon-link"></span></a>Licence</h2>
+</ul>
 
-<pre><code> Copyright 2014 Shintaro Katafuchi
+<h2>
+<a id="licence" class="anchor" href="#licence" aria-hidden="true"><span class="octicon octicon-link"></span></a>Licence</h2>
+
+<pre><code> Copyright 2015 Shintaro Katafuchi
 
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
@@ -145,12 +155,9 @@ com.squareup.picasso:picasso:2.3.4
  limitations under the License.
 </code></pre>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/hotchemi">hotchemi</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
+
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
 </html>
